# 변경사항 1. JPEG 이미지를 프레임 단위로 추출 vs 시간 단위로 추출